--- a/front-end/src/assets/scss/addPromotion.scss
+++ b/front-end/src/assets/scss/addPromotion.scss
@@ -1,8 +1,38 @@
-.add-voucher-container {
+.add-promotion-container {
+  width: 77%;
   background-color: #fff;
-  padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding-bottom: 10px;
   text-align: center;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  display: flex; /* Sử dụng flexbox để các phần tử nằm trên cùng một dòng */
+  gap: 20px; /* Khoảng cách giữa các ô input */
+  // margin-bottom: 10px;
+  padding-left: 25px;
+}
+
+.row-input {
+  margin-bottom: 5px;
+  display: flex;
+}
+
+.btn-accept {
+  margin-right: 60px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.input-container-dieukiengiamgia {
+  margin-bottom: 15px;
+  text-align: center;
+}
+.title-promotion {
+  padding-top: 20px;
+  padding-left: 20px;
+  display: flex;
 }
