--- a/front-end/src/assets/scss/HienThiNV.scss
+++ b/front-end/src/assets/scss/HienThiNV.scss
@@ -1,6 +1,6 @@
 .btn-add {
   margin-right: 20px;
-  margin-top: 20px;
+  // margin-top: 20px;
   .bl-add {
     float: right;
     padding-left: 10px;
