--- a/front-end/src/assets/scss/HoHo.scss
+++ b/front-end/src/assets/scss/HoHo.scss
@@ -3,3 +3,11 @@
   top: 100%;
   font-size: 12px;
 }
+/* Add this CSS to your component's CSS file */
+.address-form.error {
+  border-color: #ff0000;
+}
+
+.address-form .error-select .ant-select-selector {
+  border-color: #ff0000;
+}
