--- a/front-end/src/assets/scss/quanLyVoucher.scss
+++ b/front-end/src/assets/scss/quanLyVoucher.scss
@@ -84,7 +84,7 @@
 .boloc-trangThai {
   padding-top: 20px;
   display: flex;
-  margin-left: 10em;
+  margin-left: 6em;
 }
 
 .boloc-maVoucher {
@@ -94,4 +94,7 @@
 }
 .search1 {
   padding-right: 5em;
+}
+.boloc-nho {
+  height: 50%;
 }
