--- a/front-end/src/assets/scss/addPromotion.scss
+++ b/front-end/src/assets/scss/addPromotion.scss
@@ -1,5 +1,6 @@
 .add-promotion-container {
-  width: 77%;
+  width: 100%;
+  height: auto;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -7,16 +8,26 @@
   margin-bottom: 20px;
 }
 
+// .table-container {
+//   width: 100%;
+//   height: auto;
+//   background-color: #fff;
+//   border-radius: 5px;
+//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+//   text-align: center;
+//   margin-bottom: 20px;
+//   margin-top: 10px;
+// }
 .input-container {
-  display: flex; /* Sử dụng flexbox để các phần tử nằm trên cùng một dòng */
-  gap: 20px; /* Khoảng cách giữa các ô input */
+  // display: flex; /* Sử dụng flexbox để các phần tử nằm trên cùng một dòng */
+  // gap: 20px; /* Khoảng cách giữa các ô input */
   // margin-bottom: 10px;
   padding-left: 25px;
 }
 
 .row-input {
   margin-bottom: 5px;
-  display: flex;
+  display: block;
 }
 
 .btn-accept {
@@ -35,4 +46,13 @@
   padding-top: 20px;
   padding-left: 20px;
   display: flex;
+}
+
+.validate {
+  display: block; /* Hiển thị thông báo lỗi ở dưới input */
+  margin-top: 5px; /* Khoảng cách từ input */
+  padding-left: 25px;
+  font-size: 14px;
+  text-align: start;
+  color: red;
 }
