[UPD] update frontend promotion and clean code voucher

--- a/front-end/src/assets/scss/addPromotion.scss
+++ b/front-end/src/assets/scss/addPromotion.scss
@@ -31,6 +31,12 @@
   padding-left: 25px;
 }
 
+.select-value-promotion {
+  display: flex;
+  padding-left: 25px;
+  justify-content: flex-start;
+}
+
 .btn-accept {
   margin-right: 60px;
   padding-bottom: 20px;
