Update promtion add + update table

--- a/front-end/src/views/admin/promotion-manager/style.css
+++ b/front-end/src/views/admin/promotion-manager/style.css
@@ -93,3 +93,8 @@ tr:hover {
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+/* .validate {
+  margin-top: 15px;
+  margin-bottom: 10px;
+} */
