--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,5 +1,17 @@
+.txt-primary{
+  color: #2f80ed;
+}
+.txt-success{
+  color: #09a129;
+}
+.txt-warning{
+  color: #ffd500;
+}
 .txt-danger{
   color: #e5383b;
+}
+.txt-price{
+  color: #dc1111;
 }
 .badge-success{
   background-color: #09a129;
@@ -100,7 +112,7 @@ div.rs-picker-menu{
   font-weight: 500;
 }
 .button-mui{
-  border: 1px solid #2f80ed;
+  border: 1px solid white;
   background-color: #2f80ed;
   color: white;
   height: 40px;
@@ -222,7 +234,7 @@ font-family: 'Roboto', sans-serif;
 }
 
 .time-line {
-    display: inline-block; /* Cho phép phần tử con co dãn tự động */
+    display: inline-block;
 }
 
 .scroll-container::-webkit-scrollbar {
@@ -241,7 +253,6 @@ font-family: 'Roboto', sans-serif;
 .scroll-container::-webkit-scrollbar-thumb:hover {
     background-color: #d9d9d9;
 }
-
 
 .scroll-container2 {
     overflow-x: hidden;
@@ -561,10 +572,10 @@ input[type="number"]::-ms-outer-spin-button {
 }
 
 
-.__add-cart0:hover {
-  color: white;
-  background-color: #333;
-}
+/* .__add-cart0:hover { */
+/*   color: white; */
+/*   background-color: #333; */
+/* } */
 .__add-cart1:hover {
   color: white;
   background-color: #333;
@@ -576,18 +587,19 @@ input[type="number"]::-ms-outer-spin-button {
     background: #212327;
     cursor: pointer;
     transition: all 0.3s ease;
-    width: 40%;
-    height: 50px;
+    width: 250px;
+    height: 56px;
 }
 
 .__add-cart0 {
     outline: none;
     color: white;
-    background: #212327;
-  border-radius: 7px;
-    border: 1px solid #212327;
+    /* background: #212327; */
+    /* background: #2f80ed; */
+  border-radius: 15px;
+    border: 1px solid white;
     cursor: pointer;
-    transition: all 0.3s ease;
+    /* transition: all 0.3s ease; */
     width: 95%;
     height: 60px;
 
