--- a/front-end/src/views/admin/voucher-manager/style.css
+++ b/front-end/src/views/admin/voucher-manager/style.css
@@ -92,11 +92,10 @@ tr:hover {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* text-align: center; */
   padding-top: 10px;
 }
 
-.btn-accept {
+.btn-accept-voucher {
   margin-right: 45px;
   padding-bottom: 20px;
   margin-bottom: 20px;
