--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -213,6 +213,39 @@ font-family: 'Roboto', sans-serif;
     box-shadow: 0 0.1rem 0.4rem #00000060;
     background-color: #ffffff;
 }
+.scroll-color{
+  padding-left: 3px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 200px;
+}
+.scroll-color::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.scroll-color::-webkit-scrollbar-thumb {
+    background-color: #999;
+    border-radius: 5px;
+}
+
+.scroll-color::-webkit-scrollbar-track {
+    margin-top: 4px;
+  margin-left: 20px;
+}
+
+.scroll-color::-webkit-scrollbar-thumb:hover {
+    background-color: #999;
+}
+
+.scroll-color::-webkit-scrollbar {
+    /* display: none; */
+    width: 6.5px;
+    display: block;
+}
+
+.scroll-color:hover::-webkit-scrollbar {
+    width: 6.5px;
+}
 
 .scroll-container1 {
     overflow-x: hidden;
