complete build UI add product

--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,3 +1,8 @@
+.underline-blue {
+        text-decoration: underline;
+        text-decoration-color: blue;
+        color: blue;
+    }
 .table-cart .ant-table-tbody > tr.ant-table-row:hover > td {
     background: white !important;
 }
