fix giao diện promotion + voucher

--- a/front-end/src/views/admin/voucher-manager/style.css
+++ b/front-end/src/views/admin/voucher-manager/style.css
@@ -124,3 +124,7 @@ tr:hover {
   color: red;
   display: block;
 }
+.table-container .ant-table-thead .ant-table-cell {
+  background-color: #2e80ed;
+  color: white;
+}
