--- a/front-end/src/views/admin/promotion-manager/style.css
+++ b/front-end/src/views/admin/promotion-manager/style.css
@@ -89,6 +89,7 @@ tr:hover {
 
 .add-promotion-container {
   width: 100%;
+  height: 500px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -96,7 +97,7 @@ tr:hover {
 
 .add-promotion-inProduct-container {
   width: 100%;
-  height: 433px;
+  height: 500px;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -136,3 +137,7 @@ tr:hover {
   margin-top: 15px;
   margin-bottom: 10px;
 } */
+.table-container .ant-table-thead .ant-table-cell {
+  background-color: #2e80ed;
+  color: white;
+}
