--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,3 +1,41 @@
+.overlay {
+  pointer-events: none; /* Ngăn người dùng tương tác */
+}
+.text-loading {
+  transition: opacity 250ms;
+  transition-delay: 250ms;
+}
+.loading .text-loading {
+  opacity: 0;
+  transition-delay: 0s;
+}
+.loading .spinner {
+  opacity: 1;
+  transition-delay: 250ms;
+}
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  border-top-color: white;
+  opacity: 0;
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  width: 23px;
+  height: 23px;
+  transition: opacity 250ms;
+  animation: rotate-spinner 1s linear;
+  animation-iteration-count: infinite;
+}
+@keyframes rotate-spinner {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .underline-blue {
         text-decoration: underline;
         text-decoration-color: blue;
