CRUD Backend các màn nhỏ của sản phẩm

--- a/front-end/src/views/admin/voucher-manager/style.css
+++ b/front-end/src/views/admin/voucher-manager/style.css
@@ -101,6 +101,14 @@ tr:hover {
   display: flex;
   justify-content: flex-end;
 }
+
+.btn-accept-update {
+  margin-right: 210px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+}
 .validate-value {
   margin-top: 5px;
   font-size: 14px;
