--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,3 +1,7 @@
+.disabled-row {
+  opacity: 0.6;
+  pointer-events: none;
+}
 .overlay {
   pointer-events: none; /* Ngăn người dùng tương tác */
 }
@@ -36,6 +40,14 @@
   }
 }
 
+.underline-custom:hover {
+        text-decoration: underline;
+        text-decoration-color: #2f80ed;
+        color: #2f80ed;
+    }
+.underline-custom {
+        color: #2f80ed;
+    }
 .underline-blue {
         text-decoration: underline;
         text-decoration-color: blue;
@@ -222,8 +234,9 @@ font-family: 'Roboto', sans-serif;
 }
 
 .table-container .ant-table-thead .ant-table-cell {
-  background-color: #2e80ed;
-  color: white;
+  background-color: #F4F5FA !important;
+  color: black !important;
+  /* color: white !important; */
 }
 .table-container {
     /* margin: 0 -24px;  */
@@ -256,6 +269,39 @@ font-family: 'Roboto', sans-serif;
     box-shadow: 0 0.1rem 0.4rem #00000060;
     background-color: #ffffff;
 }
+.scroll-imei{
+  padding-left: 3px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    height: 360px;
+}
+.scroll-imei::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.scroll-imei::-webkit-scrollbar-thumb {
+    background-color: #999;
+    border-radius: 5px;
+}
+
+.scroll-imei::-webkit-scrollbar-track {
+  margin-left: 20px;
+}
+
+.scroll-imei::-webkit-scrollbar-thumb:hover {
+    background-color: #999;
+}
+
+.scroll-imei::-webkit-scrollbar {
+    /* display: none; */
+    width: 6.5px;
+    display: block;
+}
+
+.scroll-imei:hover::-webkit-scrollbar {
+    width: 6.5px;
+}
+
 .scroll-color{
   padding-left: 3px;
     overflow-x: hidden;
@@ -709,7 +755,7 @@ input[type="number"]::-ms-outer-spin-button {
     cursor: pointer;
     /* transition: all 0.3s ease; */
     width: 95%;
-    height: 60px;
+    height: 65px;
 
 }
 
