[fix] nhan vien tach bang

--- a/front-end/src/assets/scss/edit-dia-chi.scss
+++ b/front-end/src/assets/scss/edit-dia-chi.scss
@@ -2,12 +2,12 @@
 .collapse-panel {
   .ant-collapse-header {
     background-color: #ffffff;
-    border: none;
+    // border: none;
   }
 
   .ant-collapse-content-box {
-    border: 0px;
-    border-top: none;
+    border: 100px;
+    // border-top: none;
     background-color: #fff;
     padding: 10px;
   }
