build UI update product

--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,3 +1,9 @@
+/* .remove-product-img{ */
+/*   display: none; */
+/* } */
+/* .card-product-img:hover .remove-product-img{ */
+/*   display: block; */
+/* } */
 @media screen {
 	/* .wrap-container, .sidebar, .position-relative{ */
 	/* 	display: none; */
