--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -310,6 +310,11 @@ font-family: 'Roboto', sans-serif;
     background-color: #ffffff;
 }
 
+.wrap-order-refund {
+    box-shadow: 0 0.1rem 0.4rem #00000060;
+    background-color: #ffffff;
+  height: auto;
+}
 .wrap-order-detail {
     box-shadow: 0 0.1rem 0.4rem #00000060;
     background-color: #ffffff;
@@ -1022,7 +1027,7 @@ input[type="number"]::-ms-outer-spin-button {
 	border-spacing: 0;
 	border-collapse: collapse;
 	width: 100%;
-	margin: 15px auto;
+	/* margin: 15px auto; */
 }
 
 .table-info-order th,
