build api update product

--- a/back_end/src/main/resources/templates/email-template.html
+++ b/back_end/src/main/resources/templates/email-template.html
@@ -13,13 +13,13 @@
   <div class='' style="text-align: center; margin-left: 3px">
     <span style="font-weight: bold; font-size: 25px; color: #2f80ed">Cảm ơn quý khách đã đặt hàng tại BEEPHONESHOP!</span>
   </div>
-  <div class='' style="margin-top: 10px; width: 56%; margin: 0 auto">
+  <div class='' style="margin-top: 10px; margin: 0 auto; width: 86%">
     <span style="font-size: 20px">
     Xin chào <span class='' style="font-weight: bold">Thúy Hằng</span>
     </span>
   </div>
   <div class='' style="margin-top: 5px">
-    <div style="width: 56%; margin: 0 auto">
+    <div style="width: 86%; margin: 0 auto">
         <span >
           <span style="font-weight: bold">
             BEEPHONESHOP
@@ -38,7 +38,7 @@
 
   <div class='' style="margin-top: 20px; margin: 0 auto">
     <table style="border-spacing: 0; border-collapse: collapse; margin: 0 auto;
-width: 56%; margin-top: 15px;" class='' border="1" cellpadding="5" cellspacing="10">
+width: 86%; margin-top: 15px;" class='' border="1" cellpadding="5" cellspacing="10">
       <thead>
       <tr class=''>
         <th colSpan="2" style="border: 1px solid #d1d1d1; text-align: start;
@@ -124,7 +124,7 @@ background-color: #e1e1e1; color: black" class="">Thông tin đơn hàng
 
   <div class='' style="margin: 0 auto">
       <table style="border-spacing: 0; border-collapse: collapse; margin: 0 auto;
-width: 56%; margin-top: 15px;" class='' border="1" cellpadding="5" cellspacing="10">
+width: 86%; margin-top: 15px;" class='' border="1" cellpadding="5" cellspacing="10">
       <thead>
       <tr class=''>
         <th style="border: 1px solid #d1d1d1; vertical-align: top; text-align: start;
@@ -144,7 +144,7 @@ background-color: #e1e1e1; color: black" colSpan="2" class="">Địa chỉ nhậ
 
   <div class='' style="margin: 0 auto">
       <table style="border-spacing: 0; border-collapse: collapse; margin: 0 auto;
-width: 56%; margin-top: 15px;" class='' border="1" cellpadding="5" cellspacing="10">
+width: 86%; margin-top: 15px;" class='' border="1" cellpadding="5" cellspacing="10">
       <thead>
       <tr class=''>
         <th style="border: 1px solid #d1d1d1; vertical-align: top;
@@ -169,7 +169,7 @@ background-color: #e1e1e1; color: black; text-align: center"  class="">Thành ti
               <img src="https://res.cloudinary.com/dj9e1otbm/image/upload/v1700643568/oeojgihz3v9gtovoijjg.png"
                    class=""
                    alt=""
-                   style="width: 105px; height: 105px"
+                   style="width: 155px; height: 155px"
               />
             </div>
             <div class="product" title='Xem sản phẩm' style="margin-left: 10px">
@@ -226,7 +226,7 @@ background-color: #e1e1e1; color: black; text-align: center"  class="">Thành ti
       </tbody>
     </table>
 
-    <div class='' style="width: 56%; margin: 0 auto; margin-top: 20px">
+    <div class='' style="width: 86%; margin: 0 auto; margin-top: 20px">
           <span>
             Nếu bạn có bất kì câu hỏi nào, hoặc cần hỗ trợ về đơn hàng. Vui lòng liên hệ với chúng tôi qua Hotline:
             <span class='' style="cursor: pointer">
