--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,3 +1,6 @@
+.ant-checkbox-inner, .ant-checkbox-input {
+    transform: scale(1.2)
+  }
 /* .remove-product-img{ */
 /*   display: none; */
 /* } */
