build UI rollback status

--- a/front-end/src/views/admin/order-manager/style.css
+++ b/front-end/src/views/admin/order-manager/style.css
@@ -1,3 +1,7 @@
+.disable-product{
+  opacity: 0.7;
+  pointer-events: none;
+}
 .ant-checkbox-inner, .ant-checkbox-input {
     transform: scale(1.2)
   }
